[gd_scene load_steps=16 format=3]

[ext_resource type="Script" path="res://scripts/hortus_conclusus_cinematic_new.gd" id="1_e7m2k"]
[ext_resource type="Script" path="res://scripts/plants/medieval_herb_garden.gd" id="2_u4r2j"]
[ext_resource type="Script" path="res://scripts/atmosphere_controller.gd" id="3_k3m4p"]
[ext_resource type="AudioStream" path="res://assets/music/medieval_evening.wav" id="4_p8n2q"]
[ext_resource type="Script" path="res://scripts/cinematic_meditation_display.gd" id="5_r7n3s"]
[ext_resource type="Script" path="res://scripts/camera_path.gd" id="6_t9p4q"]
[ext_resource type="Script" path="res://scripts/shaders/medieval_shader_pack.gd" id="7_v5r2t"]
[ext_resource type="Script" path="res://scripts/hortus_conclusus_cinematic_integration.gd" id="8_w6s3u"]
[ext_resource type="Script" path="res://scripts/camera_system_enhanced.gd" id="9_x7t4v"]

[sub_resource type="Environment" id="Environment_q8w2r"]
background_mode = 2
background_color = Color(0.2, 0.3, 0.4, 1)
ambient_light_color = Color(0.8, 0.85, 0.9, 1)
ambient_light_energy = 0.5
tonemap_mode = 2
glow_enabled = true
glow_intensity = 0.7
glow_bloom = 0.2
fog_enabled = true
fog_light_color = Color(0.85, 0.9, 0.95, 1)
fog_density = 0.001
volumetric_fog_enabled = true
volumetric_fog_density = 0.01

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j6m2p"]
albedo_color = Color(0.2, 0.3, 0.15, 1)
roughness = 0.8

[sub_resource type="PlaneMesh" id="PlaneMesh_y8n4t"]
size = Vector2(100, 100)

[sub_resource type="Curve3D" id="Curve3D_k7m2p"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0, 10, 30, 5, 0, -5, -5, 0, 5, -20, 15, 20, 0, 0, 0, 0, 0, 0, -30, 12, 0, 5, 0, 5, -5, 0, -5, -20, 8, -20, 0, 0, 0, 0, 0, 0, 0, 20, -30, -5, 0, -5, 5, 0, 5, 20, 15, -20, 0, 0, 0, 0, 0, 0, 30, 12, 0, -5, 0, -5, 5, 0, 5, 20, 8, 20, 0, 0, 0, 0, 0, 0, 0, 25, 0),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 9

[sub_resource type="Animation" id="Animation_p8n2q"]
resource_name = "day_night_cycle"
length = 120.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DirectionalLight3D:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 30, 60, 90, 120),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.785398, 0, 0), Vector3(0, 0, 0), Vector3(-0.785398, 0, 0), Vector3(-1.5708, 0, 0), Vector3(0.785398, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DirectionalLight3D:light_energy")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 30, 60, 90, 120),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.5, 1.5, 0.8, 0.1, 0.5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DirectionalLight3D:light_color")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 30, 60, 90, 120),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0.8, 0.7, 1), Color(1, 0.95, 0.9, 1), Color(1, 0.8, 0.7, 1), Color(0.6, 0.6, 1, 1), Color(1, 0.8, 0.7, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WorldEnvironment:environment:fog_light_color")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 30, 60, 90, 120),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.9, 0.8, 0.7, 1), Color(0.85, 0.9, 0.95, 1), Color(0.9, 0.8, 0.7, 1), Color(0.3, 0.3, 0.5, 1), Color(0.9, 0.8, 0.7, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WorldEnvironment:environment:ambient_light_energy")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 30, 60, 90, 120),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.3, 0.5, 0.3, 0.1, 0.3]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("WorldEnvironment:environment:ambient_light_color")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 30, 60, 90, 120),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.9, 0.8, 0.7, 1), Color(0.8, 0.85, 0.9, 1), Color(0.9, 0.8, 0.7, 1), Color(0.4, 0.4, 0.6, 1), Color(0.9, 0.8, 0.7, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("WorldEnvironment:environment:background_color")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 30, 60, 90, 120),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.6, 0.4, 0.2, 1), Color(0.2, 0.3, 0.4, 1), Color(0.6, 0.4, 0.2, 1), Color(0.05, 0.05, 0.1, 1), Color(0.6, 0.4, 0.2, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("WorldEnvironment:environment:glow_intensity")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 30, 60, 90, 120),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.5, 0.7, 0.5, 1.0, 0.5]
}
tracks/8/type = "method"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 30, 60, 90),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": ["dawn"],
"method": &"update_time_of_day"
}, {
"args": ["noon"],
"method": &"update_time_of_day"
}, {
"args": ["dusk"],
"method": &"update_time_of_day"
}, {
"args": ["night"],
"method": &"update_time_of_day"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r7n3s"]
_data = {
"day_night_cycle": SubResource("Animation_p8n2q")
}

[node name="HortusConclususCinematic" type="Node3D"]
script = ExtResource("1_e7m2k")

[node name="CinematicIntegration" type="Node" parent="."]
script = ExtResource("8_w6s3u")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_q8w2r")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 20, 0)
light_color = Color(1, 0.95, 0.9, 1)
light_energy = 1.2
shadow_enabled = true
directional_shadow_max_distance = 100.0

[node name="Ground" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_j6m2p")
mesh = SubResource("PlaneMesh_y8n4t")

[node name="CameraSystem" type="Node3D" parent="."]
script = ExtResource("9_x7t4v")

[node name="CameraPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_k7m2p")
script = ExtResource("6_t9p4q")

[node name="PathFollow3D" type="PathFollow3D" parent="CameraPath"]
transform = Transform3D(0.999999, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 0, 10, 30)
rotation_mode = 4

[node name="Camera3D" type="Camera3D" parent="CameraPath/PathFollow3D"]
current = true
fov = 70.0
far = 200.0

[node name="AtmosphereController" type="Node" parent="."]
script = ExtResource("3_k3m4p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r7n3s")
}
autoplay = "day_night_cycle"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_p8n2q")
volume_db = -10.0
autoplay = true

[node name="MeditationDisplay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_r7n3s")

[node name="BackgroundPanel" type="ColorRect" parent="MeditationDisplay"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -150.0
offset_right = 350.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.1, 0.1, 0.1, 0.7)

[node name="MeditationText" type="RichTextLabel" parent="MeditationDisplay"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -330.0
offset_top = -140.0
offset_right = 330.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "In the garden of sacred geometry, divine patterns emerge,
As above, so below, the cosmic order affirms.
Through seasons of growth and dormancy, the eternal cycle turns,
In this enclosed garden, the soul's wisdom silently yearns."

[node name="GlowEffect" type="ColorRect" parent="MeditationDisplay"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -150.0
offset_right = 350.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.8, 0.7, 0.5, 0.1)

[node name="GardenElements" type="Node3D" parent="."]

[node name="MonasticGarden" type="Node3D" parent="GardenElements"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 0)
script = ExtResource("2_u4r2j")

[node name="KnotGarden" type="Node3D" parent="GardenElements"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20)
script = ExtResource("2_u4r2j")

[node name="RaisedGarden" type="Node3D" parent="GardenElements"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 0)
script = ExtResource("2_u4r2j")

[node name="ShaderController" type="Node" parent="."]
script = ExtResource("7_v5r2t")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 46.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Hortus Conclusus: The Enclosed Garden"
horizontal_alignment = 1

[node name="Meditation" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "\"In the garden of sacred geometry, divine patterns emerge,
As above, so below, the cosmic order affirms.
Through seasons of growth and dormancy, the eternal cycle turns,
In this enclosed garden, the soul's wisdom silently yearns.\""
horizontal_alignment = 1

[node name="FadeOverlay" type="ColorRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="SacredGeometry" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
